--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@
 # Test binary, built with `go test -c`
 *.test
 
+# Filesystem artefacts
+.DS_Store
+*.swp
+
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
